# slime

./: .gitignore  ARCHITECTURE.md  CONCURRENT_HITL.md  Cargo.toml  LICENSE  README.md  moss.mmd 
docs/: ADR-001-blackboard-pattern.md  ADR-002-rust.md  ADR-003-code-as-solver.md  ADR-004-flat-agent-loops.md  ADR-005-hitl-gated.md  ADR-006-living-blackboard.md  ADR-009-unified-solver.md  ADR-010-solver-state-observability.md  ADR-011-hitl-mpsc.md
phases/: README.md  phase-7-defense-claw.md  phase-8-agent-loop.md  plan.md
phases/completed/: phase-6.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/moss/: artifact_guard.rs  blackboard.rs  compiler.rs  decomposition.rs  executor.rs  mod.rs  orchestrator.rs  runner.rs  signal.rs  solver.rs  types.rs
src/moss/prompts/: compiler.md  compiler.xml  decompose.md  orchestrator.xml  solver.md  synthesize.md
src/providers/: mod.rs
src/providers/local/: mod.rs
src/providers/remote/: mod.rs  openrouter.rs
