[package]
name = "moss"
version = "0.1.0"
edition = "2024"
description = "A decentralized, parallel-thinking organism framework."

[dependencies]
tokio = { version = "1.43", features = ["full"] }
dashmap = { version = "6.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] } # For web search
async-trait = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1"
minijinja = "2"
tempfile = "3"