[package]
name = "moss"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Ko Ngo Yu"]
description = "A local-first AI Operating System built on the Blackboard pattern."

[dependencies]
tokio = { version = "1.43", features = ["full"] }
dashmap = { version = "6.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] } # For web search
async-trait = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1"
minijinja = { version = "2", features = ["json"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ratatui    = "0.29"
crossterm  = "0.28"